--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
   
 }
 .index{
-  background-image: url(images/homeimg.jpg);
+  background-image: url(images/download.png);
   background-size: cover;
   background-position-x: right;
 }
